[tool.poetry]
name = "IKFM2409"
version = "0.1.0"
description = ""
authors = ["lesguillemets <kgkacko+github@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
pandas = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
